[backend]: added pipeline
