# backend/internal/docs/swagger.yaml
@@ -38,6 +38,15 @@ definitions:
       user_id:
         type: integer
     type: object
+  models.PipeLineDashboardDto:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      title:
+        type: string
+    type: object
   models.UserData:
     properties:
       role:
@@ -124,7 +133,37 @@ paths:
       summary: Register with email
       tags:
       - auth
-  /api/dashboard/pipelines:
+  /api/dashboard/:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a specific dashboard for the authenticated user using
+        its ID
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Dashboard details
+          schema:
+            items:
+              $ref: '#/definitions/models.PipeLineDashboardDto'
+            type: array
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Retrieve a dashboard by its ID
+      tags:
+      - dashboards
+  /api/dashboard/pipeline:
     post:
       consumes:
       - application/json
